# Smart-Student-Dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt  ssd.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
scripts/: init_db.py  migrate_csv.py
ssd/: __init__.py  academics.py  auth.py  charts.py  config.py  db.py  main.py  models.py  repository.py  theme.py
ssd/views/: __init__.py  _common.py  attendance.py  auth_view.py  history.py  home.py  marks.py  settings.py
tests/: conftest.py  test_academics.py  test_repository.py
