[project]
name = "smart-student-dashboard"
version = "2.0.0"
description = "Multi-user academic dashboard (marks, attendance, SGPA/CGPA) built with Streamlit + Postgres."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["student_data"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]  # allow Streamlit-style calls in argument defaults where needed

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
